--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@syncfusion/ej2-react-buttons": "^22.2.9",
-    "@syncfusion/ej2-react-diagrams": "^22.2.9",
+    "@syncfusion/ej2-react-diagrams": "^22.2.12",
     "@syncfusion/ej2-react-navigations": "^22.2.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
