--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "save": "^2.9.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
