--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@syncfusion/ej2-react-diagrams": "^23.1.36",
     "@syncfusion/ej2-react-dropdowns": "^23.1.36",
     "@syncfusion/ej2-react-navigations": "^23.1.36",
+    "@syncfusion/ej2-react-popups": "^23.1.36",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -32,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:server": "json-server --watch db.json --port 3001",
+    "start:server": "nodemon --watch db.json --delay 2.5 --exec \"json-server db.json --port 3001\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -54,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
