Ekana ena draft me actions

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@syncfusion/ej2-react-buttons": "^23.1.36",
     "@syncfusion/ej2-react-diagrams": "^23.1.36",
     "@syncfusion/ej2-react-dropdowns": "^23.1.36",
+    "@syncfusion/ej2-react-inputs": "^23.1.36",
     "@syncfusion/ej2-react-navigations": "^23.1.36",
     "@syncfusion/ej2-react-popups": "^23.1.36",
     "@testing-library/jest-dom": "^5.17.0",
