--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@syncfusion/ej2-react-buttons": "^23.1.36",
     "@syncfusion/ej2-react-diagrams": "^23.1.36",
     "@syncfusion/ej2-react-dropdowns": "^23.1.36",
+    "@syncfusion/ej2-react-grids": "^23.1.36",
     "@syncfusion/ej2-react-inputs": "^23.1.36",
+    "@syncfusion/ej2-react-lists": "^23.1.36",
     "@syncfusion/ej2-react-navigations": "^23.1.36",
     "@syncfusion/ej2-react-popups": "^23.1.36",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +19,7 @@
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "flatted": "^3.2.9",
     "helmet": "^7.0.0",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
@@ -59,5 +62,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
