--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "flatted": "^3.2.9",
     "helmet": "^7.0.0",
     "json-server": "^0.17.3",
