--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@syncfusion/ej2-react-buttons": "^27.1.53",
     "@syncfusion/ej2-react-diagrams": "^27.1.53",
@@ -21,6 +24,7 @@
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "flatted": "^3.2.9",
+    "formik": "^2.4.6",
     "helmet": "^7.0.0",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
@@ -34,7 +38,8 @@
     "save": "^2.9.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.3.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
