--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "file-saver": "^2.0.5",
     "flatted": "^3.2.9",
     "formik": "^2.4.6",
+    "fs": "^0.0.1-security",
+    "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
     "json-server": "^0.17.3",
     "localforage": "^1.10.0",
